Unread messages shown and increased when needed