@@ -1,6 +1,7 @@
 package io.inbox;
 
 import java.nio.file.Path;
+import java.util.Arrays;
 import java.util.List;
 
 import javax.annotation.PostConstruct;
@@ -13,16 +14,9 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.data.cassandra.repository.config.EnableCassandraRepositories;
 import org.springframework.web.bind.annotation.RestController;
 
-import com.datastax.oss.driver.api.core.uuid.Uuids;
-
-import io.inbox.emaiList.EmailListItem;
-import io.inbox.emaiList.EmailListItemKey;
-import io.inbox.emaiList.EmailListItemRepository;
-import io.inbox.email.Email;
-import io.inbox.email.EmailRepository;
+import io.inbox.email.EmailService;
 import io.inbox.folders.Folder;
 import io.inbox.folders.FolderRepository;
-import io.inbox.folders.UnreadEmailStatsRepository;
 
 @SpringBootApplication
 @EnableCassandraRepositories
@@ -30,16 +24,11 @@ import io.inbox.folders.UnreadEmailStatsRepository;
 public class InboxApp {
 
     @Autowired
-    FolderRepository folderRespository;
+    private FolderRepository folderRespository;
 
     @Autowired
-    EmailListItemRepository emailListItemRepository;
+    private EmailService emailService;
 
-    @Autowired
-    EmailRepository emailRepository;
-
-    @Autowired
-    UnreadEmailStatsRepository unreadEmailStatsRepository;
 
 	public static void main(String[] args) {
 		SpringApplication.run(InboxApp.class, args);
@@ -53,38 +42,13 @@ public class InboxApp {
 
     @PostConstruct
     public void init(){
-        folderRespository.save(new Folder("vict0rsan", "Inbox", "blue"));
-        folderRespository.save(new Folder("vict0rsan", "Sent", "green"));
-        folderRespository.save(new Folder("vict0rsan", "Important", "yellow"));
-
-        unreadEmailStatsRepository.incrementUnreadCounter("vict0rsan", "Inbox");
-        unreadEmailStatsRepository.incrementUnreadCounter("vict0rsan", "Inbox");
-        unreadEmailStatsRepository.incrementUnreadCounter("vict0rsan", "Inbox");
+        folderRespository.save(new Folder("vict0rsan", "Work", "blue"));
+        folderRespository.save(new Folder("vict0rsan", "University", "green"));
+        folderRespository.save(new Folder("vict0rsan", "Family", "yellow"));
 
         for(int i = 0; i < 10; i++){
-            EmailListItemKey key = new EmailListItemKey();
-            key.setId("vict0rsan");
-            key.setLabel("Inbox");
-            key.setTimeUUID(Uuids.timeBased());
-
-            EmailListItem item = new EmailListItem();
-            item.setKey(key);
-            item.setDestination(List.of("vict0rsan", "abc", "testingUser"));
-            item.setSubject("Subject: " + i);
-            item.setIsRead(false);
-            emailListItemRepository.save(item);
-
-            Email email = new Email();
-            email.setId(key.getTimeUUID());
-            email.setSender("vict0rsan");
-            email.setSubject("Subject:" + i);
-            email.setBody("Body: " + i);
-            email.setDestination(item.getDestination());
-            emailRepository.save(email);
+            emailService.sendEmail("vict0rsan", Arrays.asList("vict0rsan", "test1", "abc"), "Hello: " + i, "Body: " + i);
         }
+
     }
-
-    
-	
-
 }
